# memory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: JOBS_DONE.md  MEMORY.md  TODO.md
docs/superpowers/plans/: 2026-04-13-cli-first-memory-dream.md  2026-04-17-official-memory-integration.md
examples/: climamind.config.example.toml
scripts/: pre_merge_gate.sh
src/codex_memory/: __init__.py  cli.py  config.py  conversations.py  hooks.py  official.py  retain.py  skills.py  sources.py  store.py
tests/: test_cli.py  test_conversations.py  test_official_memories.py  test_retain.py  test_skills.py  test_sources.py  test_store.py
