[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-memory"
version = "0.1.0"
description = "Local-first memory and self-learning helpers for Codex workflows"
requires-python = ">=3.11,<3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
codex-memory = "codex_memory.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
